swiper-class together with animate-class only works for the 1st pic

--- a/javascript_day7_day8/basic_clwrk_day7.html
+++ b/javascript_day7_day8/basic_clwrk_day7.html
@@ -35,15 +35,15 @@
     </div>
     <section id="hero_section" class="swiper mySwiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide animate__animated animate__shakeX"><img src="img/Sextet_1.jpg">Sextet 1</div>
+            <div class="swiper-slide animate__animated animate__flipInX"><img src="img/Sextet_1.jpg">Sextet 1</div>
             <div class="swiper-slide animate__animated animate__shakeX"><img src="img/Sextet_2.jpg">Sextet 2</div>
             <div class="swiper-slide animate__animated animate__shakeX"><img src="img/Sextet_3.jpg">Sextet 3</div>
-            <div class="swiper-slide animate__flipInX"><img src="img/Sextet_4.jpg">Sextet 4</div>
-            <div class="swiper-slide animate__flipInX"><img src="img/Sextet_5.jpg">Sextet 5</div>
-            <div class="swiper-slide animate__flipInX"><img src="img/Sextet_6.jpg">Sextet 6</div>
-            <div class="swiper-slide animate__flipInX"><img src="img/Sextet_7.jpg">Sextet 7</div>
-            <div class="swiper-slide animate__flipInX"><img src="img/Sextet_8.jpg">Sextet 8</div>
-            <div class="swiper-slide animate__flipInX"><img src="img/Sextet_10.jpg">Sextet 9</div>
+            <div class="swiper-slide"><img src="img/Sextet_4.jpg">Sextet 4</div>
+            <div class="swiper-slide"><img src="img/Sextet_5.jpg">Sextet 5</div>
+            <div class="swiper-slide"><img src="img/Sextet_6.jpg">Sextet 6</div>
+            <div class="swiper-slide"><img src="img/Sextet_7.jpg">Sextet 7</div>
+            <div class="swiper-slide"><img src="img/Sextet_8.jpg">Sextet 8</div>
+            <div class="swiper-slide"><img src="img/Sextet_10.jpg">Sextet 10</div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
