vehicle rental - rendering&close btn issue

--- a/typescript_day1_day2/Classwork_day2/adv_clwkr_day2.html
+++ b/typescript_day1_day2/Classwork_day2/adv_clwkr_day2.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS only  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <!-- My personal styles -->
+  <!-- personal styles -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     <div class="container px-11" id="vehi">
         <section id="hero" class="cartypes d-flex align-content-around pt-4">
             <!-- 4 different vehicle-types dynamically from .js>  -->
-            <!-- <div class="img" id="img_0"><h5>Our limousine models</h5>
+            <!-- old placeholder <div class="img" id="img_0"><h5>Our limousine models</h5>
               <img src="img/Audi-RS4-Avant.jpg" class="rounded w-100" alt="car">
               <ul class="list-group" id="lg_0">
                 <li class="list-group-item"><a class="model--link" href="#">Audi RS4 Avant</a></li>
@@ -34,9 +34,7 @@
         </div>
 
     </div>
-    <!-- <div class="container px-11" id="hoho">
-      <h3 class="bs-yellow">some objects of JS Day5</h3>
-  </div> -->
+
     <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
